fix layout problems

--- a/src/views/Article/scss/index.scss
+++ b/src/views/Article/scss/index.scss
@@ -23,12 +23,10 @@
     &__title {
       background-color: none;
       display: inline-block;
-      transform: skew(45deg);
       padding: 1.5vw 9vw;
 
       h1 {
         display: inline-block;
-        transform: skew(-45deg);
         text-transform: none;
         color: $white;
         font-family: "Josefin Sans", sans-serif;
